<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/registerRelative_layout"
    android:background="@drawable/liquor_glass_background"
    tools:context="com.example.kiiru.liquorglass.CustomerRegisterActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/regEdt_fName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_fname"
            app:met_textColorHint="@color/colorPrimaryDark"
            app:met_textColor="@color/colorPrimaryDark"
            android:textSize="28sp"
            android:inputType="textPersonName"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="12"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"
            />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/regEdt_lName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_lname"
            app:met_textColorHint="@color/colorPrimaryDark"
            app:met_textColor="@color/colorPrimaryDark"
            android:textSize="28sp"
            android:inputType="textPersonName"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="12"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/regEdt_Phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone"
            app:met_textColorHint="@color/colorPrimaryDark"
            app:met_textColor="@color/colorPrimaryDark"
            android:textSize="28sp"
            android:inputType="phone"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="12"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"
            />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/regEdt_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            app:met_textColorHint="@color/colorPrimaryDark"
            app:met_textColor="@color/colorPrimaryDark"
            android:textSize="28sp"
            android:inputType="textEmailAddress"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="12"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/regEdt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_textColorHint="@color/colorPrimaryDark"
            android:hint="@string/hint_password"
            app:met_textColor="@color/colorPrimaryDark"
            android:textSize="28sp"
            android:inputType="textPassword"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="12"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"
            />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/regEdt_retypePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_textColorHint="@color/colorPrimaryDark"
            android:hint="@string/hint_retypePass"
            app:met_textColor="@color/colorPrimaryDark"
            android:textSize="28sp"
            android:inputType="textPassword"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="12"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"
            />

        <info.hoang8f.widget.FButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/regBtn_signUp"
            android:text="@string/btn_register"
            android:textColor="@android:color/white"
            android:layout_alignParentBottom="true"
            app:buttonColor="@color/btn_register"
            app:shadowColor="@android:color/black"
            app:shadowEnabled="true"
            app:shadowHeight="5dp"
            app:cornerRadius="4dp"
            android:layout_margin="8dp"
            />

    </LinearLayout>
</ScrollView>



</RelativeLayout>
