<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/liquor_glass_background"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    tools:context="com.example.kiiru.liquorglass.UserProfile">

    <android.support.v7.widget.CardView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginBottom="20sp"
                android:src="@mipmap/ic_default_user"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimaryDark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_first_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/profileFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@null"
            android:textColor="@color/profileDetails"
            android:textSize="18sp"
            android:textStyle="italic"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_last_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/profileLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@null"
            android:textColor="@color/profileDetails"
            android:textSize="18sp"
            android:textStyle="italic"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_phone_number"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/profilePhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:background="@null"
            android:inputType="phone"
            android:textColor="@color/profileDetails"
            android:textSize="18sp"
            android:textStyle="italic"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_email_address"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/profileEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:background="@null"
            android:inputType="textEmailAddress"
            android:textColor="@color/profileDetails"
            android:textSize="18sp"
            android:textStyle="italic"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_password"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/profilePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:background="@null"
            android:inputType="textPassword"
            android:textColor="@color/profileDetails"
            android:textSize="18sp"
            android:textStyle="italic" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimaryDark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:weightSum="2">

        <info.hoang8f.widget.FButton
            android:id="@+id/profileSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/user_save"
            android:textColor="@color/profileDetails"
            app:cornerRadius="4dp"
            app:fButtonColor="@color/btnRegister"
            app:shadowColor="@color/colorPrimaryDark"
            app:shadowEnabled="true"
            app:shadowHeight="3dp"
            />
        <info.hoang8f.widget.FButton
            android:id="@+id/profileBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="@string/user_cancel"
            android:textColor="@color/profileDetails"
            app:cornerRadius="4dp"
            app:fButtonColor="@color/colorAccent"
            app:shadowColor="@color/colorPrimaryDark"
            app:shadowEnabled="true"
            app:shadowHeight="3dp"/>
    </LinearLayout>


</LinearLayout>
